--- a/Directory/style.css
+++ b/Directory/style.css
@@ -16,7 +16,7 @@ head{
   ul {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 14px;
     overflow: hidden;
     background-color: pink;
   }
