--- a/Directory/Midterm/style.css
+++ b/Directory/Midterm/style.css
@@ -8,18 +8,18 @@ html {
 
 head {
     background-color: rgb(238, 245, 251);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "space grotesk", Helvetica, sans-serif;
 }
 
 
 body {
 --scrollbar-width: 0px;
-font-family: Arial, Helvetica, sans-serif;
+font-family: "space grotesk", Helvetica, sans-serif;
 font-size: 10px;
 text-decoration: none;
 font-weight: 400;
-font-family: 'SpaceGrotesk-VariableFont_wght.ttf', sans-serif;
 background-color: rgb(238, 245, 251);
+color:blue
 }
 
 .header {
@@ -41,3 +41,85 @@ background-color: rgb(238, 245, 251);
     flex-flow: row wrap;
     justify-content: space-around;
 }
+
+.navbar h1 {
+    color: blue;
+    padding: 0.3em;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+}
+
+.navbar h2 {
+    color: blue;
+    padding: 0.7em;
+    text-decoration: none;
+    text-align: center;
+    font-size: 10;
+}
+
+.navbar a:hover {
+    color: goldenrod;
+}
+
+.navbar a {
+    color: blue;
+    padding: 1em;
+    text-decoration: none;
+    text-align: center;
+}
+
+.projects {
+    flex-direction: column;
+    margin-left: 2em;
+    text-align: left;
+    line-height: 1.2em;
+}
+
+.projects h1 {
+    color: blue;
+    padding: 0em;
+    font-size: 25px;
+}
+
+.projects h2 {
+    color: blue;
+    font-size: 10;
+}
+
+.artwork {
+    width: 260px;
+    margin: 20px;
+    display: inline-block;
+    position: relative;
+  }
+  
+  .artwork img {
+    width: 100%;
+    height: auto;
+    border: 10px solid rgb(238, 245, 251);
+    border-bottom-width: 45px;
+  }
+  
+  .artwork p {
+    position: absolute;
+    bottom: 14px;
+    font-size: 1rem;
+    width: 280px;
+    text-align: center;
+    color: blue;
+  }
+
+@font-face {
+    font-family: 'space grotesk';
+    src: url('SpaceGrotesk-Regular.ttf') format('regular');
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'space grotesk';
+    src: url('SpaceGrotesk-Regular.ttf') format('regular');
+    font-weight: 400;
+    font-style: normal;
+  }
