--- a/Directory/Midterm/style.css
+++ b/Directory/Midterm/style.css
@@ -12,25 +12,20 @@ head {
 }
 
 
-body {
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
 --scrollbar-width: 0px;
 font-family: "space grotesk", Helvetica, sans-serif;
-font-size: 20px;
+font-size: 1em;
 text-decoration: none;
 font-weight: 400;
 background-color: rgb(233, 245, 255);
 color:blue
 }
 
-h1 {
-    background-color: blue;
-    width: 100%;
-    color: white;
-    padding: 0.3em;
-    text-decoration: none;
-    text-align: left;
-    font-size: 30px;
-}
 .row {
     display: flex;
     flex-wrap: nowrap;
@@ -39,38 +34,53 @@ h1 {
 .side {
     flex: 10%;
     flex-direction: column;
-    padding: 10px;
+    padding: 1vw;
   }
 
   .main {
-    flex: 90%;
-    padding: 10px;
+    flex: 1;
+    padding: 1vw;
   }
 
 .navbar {
     display: flex;
     flex-direction: column;
-    padding: 1em;
-    margin-left: 2em;
-    margin-right: 3em;
+    padding: 1vw;
+    margin-left: 2vw;
+    margin-right: 3vw;
 }
 
+h1 {
+  background-color: blue;
+  width: 100%;
+  color: white;
+  padding: 0.5vw 0;
+  text-decoration: none;
+  text-align: left;
+  font-size: 8vw;
+  margin: 0;
+}
 
 .navbar h2 {
     color: blue;
     text-decoration: none;
-    font-size: 10;
     flex-direction: row;
-}
-
-.navbar a:hover {
-    color: goldenrod;
+    font-size: 1.5vw;
 }
 
 .navbar a {
-    color: blue;
-    padding: 1em;
-    text-decoration: none;
+  color: blue;
+  padding: 0.5vw;
+  text-decoration: none;
+  transition: transform 0.3s ease, color 0.3s ease; 
+  display: inline-block; 
+}
+
+.navbar a:hover {
+  color: rgb(255, 195, 42);
+  transform: scale(1.5); 
+  border: 0.5vw solid rgb(233, 245, 255); 
+  background-color: rgb(233, 245, 255); 
 }
 
 .navbar .Projects-container h3 {
@@ -79,30 +89,31 @@ h1 {
 
 .navbar .Projects-container:hover h3 {
     display: block;
-    margin-left: 2em;
+    margin-left: 2vw;
 }
 
 .gallery {
     flex-direction: column;
-    margin-left: 2em;
+    margin-left: 2vw;
     text-align: left;
     line-height: 1.2em;
+    font-size: 2vw;
 }
 
 .gallery h1 {
     color: blue;
-    padding: 0em;
-    font-size: 25px;
+    padding: 0;
+    font-size: 2.5vw;
 }
 
 .gallery h2 {
     color: blue;
-    font-size: 10;
+    font-size: 1.5vw;
 }
 
 .artwork {
-    width: 30em;
-    margin: 20px;
+    width: 10vw;
+    margin: 2vw;
     display: inline-block;
     position: relative;
   }
@@ -110,18 +121,26 @@ h1 {
   .artwork img {
     width: 100%;
     height: auto;
-    border: 10px solid rgb(238, 245, 251);
-    border-bottom-width: 45px;
   }
-  
-  .artwork p {
-    position: absolute;
-    bottom: 14px;
-    font-size: 1rem;
-    width: 280px;
+
+  .title {
+   opacity: 0;
+   transition: opacity 0.3s;
+   position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Center the title */
+    width: 100%;
     text-align: center;
     color: blue;
-  }
+    background-color: rgba(0, 0, 0, 0.6); /* Optional: Add a semi-transparent background */
+    padding: 0.5vw; 
+}
+
+.artwork :hover .title {
+  opacity: 1;
+}
+
 
 @font-face {
     font-family: 'space grotesk';
@@ -136,3 +155,26 @@ h1 {
     font-weight: 400;
     font-style: normal;
   }
+
+  @media (max-width: 768px) {
+    .navbar {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .side {
+        flex: 1 1 100%;
+    }
+
+    .main {
+        flex: 1 1 100%;
+    }
+
+    .gallery {
+        font-size: 3vw;
+    }
+
+    .artwork {
+        width: 90vw;
+    }
+}
