--- a/Directory/Midterm/style.css
+++ b/Directory/Midterm/style.css
@@ -2,6 +2,12 @@ script {
     display: none;
 }
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html {
     display: block;
 }
@@ -13,32 +19,34 @@ head {
 
 
 html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  width: 100%;
---scrollbar-width: 0px;
-font-family: "space grotesk", Helvetica, sans-serif;
-font-size: 1em;
-text-decoration: none;
-font-weight: 400;
-background-color: rgb(233, 245, 255);
-color:blue
-}
-
+  --scrollbar-width: 0px;
+  font-family: "space grotesk", Helvetica, sans-serif;
+  text-decoration: none;
+  background-color: rgb(233, 245, 255);
+  color:blue
+  }
+  
+  body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+  }
+  
 .row {
     display: flex;
     flex-wrap: nowrap;
+
   }
 
 .side {
     flex: 10%;
-    flex-direction: column;
     padding: 1vw;
+    flex-direction: column;
   }
 
   .main {
-    flex: 1;
+    flex: 90%;
     padding: 1vw;
   }
 
@@ -85,6 +93,7 @@ h1 {
 
 .navbar .Projects-container h3 {
     display: none; 
+    font-size: 1.5vw; 
 }
 
 .navbar .Projects-container:hover h3 {
@@ -93,11 +102,16 @@ h1 {
 }
 
 .gallery {
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 0.4vw; 
     margin-left: 2vw;
     text-align: left;
     line-height: 1.2em;
     font-size: 2vw;
+    overflow: visible;
+    position: relative;
+    overflow-x: hidden;
 }
 
 .gallery h1 {
@@ -112,34 +126,57 @@ h1 {
 }
 
 .artwork {
-    width: 10vw;
-    margin: 2vw;
+    width: 20vw;
+    margin-right: 2vw;
+    margin-bottom: 2vw;
+    margin-top: 2vw;
     display: inline-block;
     position: relative;
   }
   
   .artwork img {
-    width: 100%;
+    width: 30vw;
     height: auto;
   }
 
-  .title {
-   opacity: 0;
-   transition: opacity 0.3s;
-   position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); /* Center the title */
-    width: 100%;
-    text-align: center;
-    color: blue;
-    background-color: rgba(0, 0, 0, 0.6); /* Optional: Add a semi-transparent background */
-    padding: 0.5vw; 
+
+.title {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  opacity: 0;
+  transition: 0.6s;
 }
 
-.artwork :hover .title {
+.title:hover {
   opacity: 1;
 }
+
+.title p {
+  font-size: 2.5vw;
+  color: blue;
+  margin-bottom: 10px;
+}
+
+.title > * {
+  transform: translateY(2vw);
+  transition: transform 0.5s;
+}
+
+.title:hover > * {
+  transform: translateY(0vw);
+}
+
+/* .artwork :hover .title {
+  opacity: 1;
+} */
 
 
 @font-face {
