--- a/Directory/Midterm/style.css
+++ b/Directory/Midterm/style.css
@@ -184,13 +184,10 @@ h1 {
   margin: 0 auto;
 }
 
-.carousel_image {
-  /* width: 100%;
-  height: 100%; */
+.carousel__image {
   width: 100%;
   height: 100%;
-  margin: 5vw;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .carousel__track-container {
@@ -210,6 +207,7 @@ h1 {
 }
 
 .carousel__slide {
+  display: none;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -217,7 +215,9 @@ h1 {
   height: 100%;
 }
 
-
+.carousel__slide:first-child {
+  display: block;
+}
 
 .carousel__button {
   position: absolute;
@@ -227,7 +227,6 @@ h1 {
   border: transparent;
   cursor: pointer;
   border: 0;
-
 }
 
 .carousel__button--left {
@@ -244,6 +243,7 @@ h1 {
 }
 
 .carousel__nav {
+  /* background: pink; */
   display: flex;
   justify-content: center;
   padding: 10px 0;
@@ -260,8 +260,12 @@ h1 {
   margin: 0 12px;
 }
 
-.carousel__indicator current-slide {
+.carousel__indicator.current-slide {
   background: rgba(0,0,0,0.75);
+}
+
+.is-hidden {
+  display: none;
 }
 
 .panels {
