--- a/Directory/Midterm/style.css
+++ b/Directory/Midterm/style.css
@@ -50,6 +50,69 @@ html, body {
     padding: 1vw;
   }
 
+  .resume {
+    flex: 90%;
+    padding: 1vw;
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .res1-container {
+    flex: 10%;
+    padding: 1vw;
+  }
+
+  .res2-container {
+    flex: 20%;
+    padding: 1vw;
+  }
+
+  .res3-container {
+    flex: 20%;
+    padding: 1vw;
+  }
+
+.res2-container ul{
+  margin-left: 1.2vw;
+}
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+  font-size: 25px
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: blue;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family:Arial, Helvetica, sans-serif;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: rgb(0, 0, 122);
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
+/* Add a background color and some padding around the form */
+.contact {
+  border-radius: 5px;
+  padding: 20px;
+  font-family: 'space grotesk';
+}
+
 .navbar {
     display: flex;
     flex-direction: column;
