--- a/Directory/Midterm/style.css
+++ b/Directory/Midterm/style.css
@@ -133,9 +133,24 @@ h1 {
   margin: 0;
 }
 
-h1:hover {
-  cursor: pointer;
+.welcome {
+  margin-top: 1.5vw;
+  background-color: blue;
+  color: white;
+  border-color: blue;
+  border-style: solid;
+  border-width:3cap;
+  border-radius: 5px 30px 30px 30px;
 }
+
+.welcome h2 {
+  font-size: 4vw;
+}
+
+.welcome h3 {
+  font-size: 2vw;
+}
+
 
 .navbar h2 {
     color: blue;
