--- a/Directory/Midterm/style.css
+++ b/Directory/Midterm/style.css
@@ -209,7 +209,22 @@ h1 {
     font-size: 1.5vw;
 }
 
+
 .artwork {
+    /* width: 20vw;
+    margin-right: 2vw;
+    margin-bottom: 2vw; */
+    margin-top: 2vw;
+    display: inline-block;
+    position: relative;
+  }
+  
+  .artwork img{
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .pencil {
     width: 20vw;
     margin-right: 2vw;
     margin-bottom: 2vw;
@@ -217,15 +232,40 @@ h1 {
     display: inline-block;
     position: relative;
   }
-  
-  .artwork img{
-    width: 30vw;
-    height: 100%;
+
+  .project_section {
+    display: flex;
+    justify-content: column;
+    align-items: flex-start;
+    
+  }
+
+  .project_section_artworks {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .project_section img{
+    /* width: 30vw;
+    height: 100%; */
+  }
+
+  .project_section_container {
+    justify-content: row;
+    align-content: space-between;
+  }
+
+  .description {
+    flex: 2;
+    padding: 1vw;
+    max-width: 60%;
+    font-size: 25px;
   }
 
 
 .title {
-  width: 30vw;
+  width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
