--- a/Directory/Midterm/Projects/Mediums/mediumsstyle.css
+++ b/Directory/Midterm/Projects/Mediums/mediumsstyle.css
@@ -1,4 +1,4 @@
-.pencil {
+/* .pencil {
     width: 20vw;
     margin-right: 2vw;
     margin-bottom: 2vw;
@@ -31,8 +31,42 @@
   }
 
   .description {
-    flex: 2;
     padding: 1vw;
     max-width: 60%;
+    font-size: 25px;
+  } */
+
+  .gallery_mediums {
+    display: grid;
+    grid-template-rows: repeat(2, fr);
+    grid-gap: 2vw;
+  }
+
+  .project_section {
+    display: flex;
+    padding-top: 25px;
+    padding-bottom: 15px;
+  }
+
+  .project_section_artworks {
+    flex: 50%;
+  }
+
+  .project_section img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .project_section_container {
+    display: flex;
+    flex-direction: row;
+    width: 48.6%;
+    gap: 1vw;
+  }
+
+  .description {
+    margin-left: 20px;
+    align-content: center;
+    flex: 50%;
     font-size: 25px;
   }
