--- a/Directory/Midterm/Projects/Mediums/mediumsstyle.css
+++ b/Directory/Midterm/Projects/Mediums/mediumsstyle.css
@@ -70,3 +70,10 @@
     flex: 50%;
     font-size: 25px;
   }
+
+  .alert {
+    display: flex;
+    text-align:center;
+    justify-content: center;
+    margin-top: 200px;
+  }
