--- a/Directory/Midterm/Projects/projectsstyle.css
+++ b/Directory/Midterm/Projects/projectsstyle.css
@@ -1,75 +1,63 @@
+
+
 .gallery {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr); 
-    gap: 0.4vw; 
-    margin-left: 2vw;
-    text-align: left;
-    line-height: 1.2em;
-    font-size: 2vw;
-    overflow: visible;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+.column {
+    flex: 33%;
+    max-width: 100%;
+    padding: 4px 14px 4px 4px;
+}
+
+.column img {
+    margin-bottom: 14px;
+    vertical-align: middle;
+    width: 100%;
+  }
+
+  /* new hover styling */
+  .container {
     position: relative;
-    overflow-x: hidden;
-}
-
-.gallery h1 {
-    color: blue;
-    padding: 0;
-    font-size: 2.5vw;
-}
-
-.gallery h2 {
-    color: blue;
-    font-size: 1.5vw;
-}
-
-
-.artwork {
-    /* width: 20vw;
-    margin-right: 2vw;
-    margin-bottom: 2vw; */
-    margin-top: 2vw;
-    display: inline-block;
-    position: relative;
+    width: 100%; /* Make images fill their container */
+    height: auto; /* Maintain aspect ratio */
+    object-fit: cover; /* or object-fit: contain; */
   }
   
-  .artwork img{
-    max-width: 100%;
-    max-height: 100%;
-  }
-
-  .title {
+  .image {
+    display: block;
     width: 100%;
-    height: 100%;
+    height: auto;
+  }
+  
+  .overlay {
     position: absolute;
     top: 0;
+    bottom: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.3);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    right: 0;
+    height: 100%;
+    width: 100%;
     opacity: 0;
-    transition: 0.7s;
-    overflow: hidden;
+    transition: .5s ease;
+    background-color: rgba(0, 0, 0, 0.3);
   }
   
-  .title:hover {
+  .container:hover .overlay {
     opacity: 1;
     cursor: pointer;
   }
   
-  .title p {
-    font-size: 2.5vw;
+  .text {
     color: white;
-    margin-bottom: 10px;
-  }
-  
-  .title > * {
-    transform: translateY(2vw);
-    transition: transform 0.5s;
-  }
-  
-  .title:hover > * {
-    transform: translateY(0vw);
-    cursor: pointer;
+    font-size: 2.5vw;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
   }
