--- a/Directory/Midterm/Projects/Mediums/mediumsstyle.css
+++ b/Directory/Midterm/Projects/Mediums/mediumsstyle.css
@@ -55,6 +55,7 @@
   .project_section img {
     max-width: 100%;
     max-height: 100%;
+
   }
 
   .project_section_container {
@@ -75,5 +76,6 @@
     display: flex;
     text-align:center;
     justify-content: center;
-    margin-top: 200px;
+    /* margin-top: 200px; */
+    font-size: 5vw;
   }
