--- a/Directory/Midterm/style.css
+++ b/Directory/Midterm/style.css
@@ -55,7 +55,7 @@ h1 {
   left: 0; 
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 170px;
-  flex: 25%;
+  flex: 27%;
   
 }
 
@@ -67,14 +67,15 @@ h1 {
   display: block;
   justify-content: space-around;
   cursor: pointer;
+  transition: width .5s, height .5s, transform .5s;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
   color: rgb(255, 195, 42);
   transform: scale(1.2); 
-  border: 1vw solid rgb(233, 245, 255, 0); 
-  background-color: rgb(233, 245, 255, 0); 
+  border: 1vw solid rgb(0, 0, 0, 0); 
+  background-color: rgb(0, 0, 0, 0); 
 }
 
 .sidenav .Projects-container h3 {
@@ -82,10 +83,11 @@ h1 {
   font-size: 1vw;
 }
 
+
 .sidenav .Projects-container:hover h3 {
   display: block;
   cursor: pointer;
-  font-size: 1vw;
+  
 }
 
 /* Style page content */
