--- a/Directory/Midterm/Home/indexstyle.css
+++ b/Directory/Midterm/Home/indexstyle.css
@@ -4,21 +4,22 @@
     color: white;
     border-color: blue;
     border-style: solid;
-    border-width:3cap;
+    border-width:2cap;
     border-radius: 5px 30px 30px 30px;
     display:flex;
+    flex-direction: row;
   }
   
   .welcome h2 {
-    font-size: 4vw;
+    font-size: 30px;
   }
   
   .welcome h3 {
-    font-size: 2vw;
+    font-size: 20px;
   }
   
   .welcome img {
-    width: 100%; /* Make images fill their container */
+    width: 50%; /* Make images fill their container */
     height: auto; /* Maintain aspect ratio */
     object-fit: cover; /* or object-fit: contain; */
   }
