--- a/Directory/Midterm/Home/indexstyle.css
+++ b/Directory/Midterm/Home/indexstyle.css
@@ -11,11 +11,11 @@
   }
   
   .welcome h2 {
-    font-size: 30px;
+    font-size: 3vw;
   }
   
   .welcome h3 {
-    font-size: 20px;
+    font-size: 2vw;
   }
   
   .welcome img {
