--- a/Directory/Midterm/Home/indexstyle.css
+++ b/Directory/Midterm/Home/indexstyle.css
@@ -1,5 +1,5 @@
 .welcome {
-    margin-top: 1.5vw;
+    /* margin-top: 1.5vw; */
     background-color: blue;
     color: white;
     border-color: blue;
