--- a/Directory/Midterm/Loading/style.css
+++ b/Directory/Midterm/Loading/style.css
@@ -1,12 +1,11 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,400i,700");
-@import url('https://fonts.googleapis.com/css?family=Oswald:700');
+
 html { 
   height: 100%; 
-  background: #1A2A3A;  
+  background: blue;;  
   color: #FFF; 
 }
 body {
-  font-family: Roboto, sans-serif;
+  font-family: 'melodrame', serif, sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,38 +13,37 @@ body {
   min-height:100%;
 }
 
+button {
+  font-family: 'melodrame', serif, sans-serif;
+  font-size: 2em;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: white;
+  background-color: blue;
+  border-radius: 100%;
+  border-color: transparent;
+}
+
 .loading {
-  font-family: Oswald, sans-serif;
-  font-size: 8em;
+  font-family: 'melodrame', serif, sans-serif;
   text-shadow: 0px 0px 10px  rgba(0,0,0,.3);
 }
    
-
-.loading .char {
-  animation: jump 2.8s linear infinite;
-  animation-delay: calc( 1s + (var(--char-index) + 1 ) * .4s  );
-  animation-timing-function: ease-in-out;
-  transform-origin:50% 100%;
+p {
+  font-size: 8em;
 }
 
-@keyframes jump {
-	5% {
-		transform: scale(1.2,0.8);
-	}
-	12%, 13% {
-		transform: translateY(-1em) scale(1,1.001);
-	}
-	17% {
-		transform: translateY(0) scale(1,0.999);
-	}
-	22% {
-		transform: translateY(0) scale(1.2,0.9);
-	}
-	23% {
-		transform: translateY(-1px) scale(1.1,1);
-	}
-	25% {
-		transform: translateY(0) scale(1,1);
-	}
+p2 {
+  font-size: 4em;
 }
 
+
+@font-face {
+  font-family: 'melodrame';
+  src: url('./../Relationship\ of\ mélodrame.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
