--- a/Directory/Midterm/style.css
+++ b/Directory/Midterm/style.css
@@ -14,13 +14,13 @@ html {
 
 head {
     background-color: rgb(238, 245, 251);
-    font-family: "space grotesk", Helvetica, sans-serif;
+    font-family: "melodrame", serif;
 }
 
 
 html, body {
   --scrollbar-width: 0px;
-  font-family: "space grotesk", Helvetica, sans-serif;
+  font-family: "melodrame", serif;
   text-decoration: none;
   background-color: rgb(233, 245, 255);
   }
@@ -33,7 +33,7 @@ html, body {
     color: blue;
   }
 
-h1 {
+/* h1 {
   background-color: blue;
   width: 100%;
   color: white;
@@ -41,7 +41,27 @@ h1 {
   text-decoration: none;
   text-align: left;
   font-size: 100px;
+} */
+
+.logo img{
+  bottom: 0;
+  right: 0;
+  max-width: 150px;
 }
+
+.logo_1 {
+  position: relative;
+  z-index: 1;
+}
+.logo_2 {
+  position: absolute;
+  z-index: 2;
+}
+
+.logo_2 :hover {
+  translate: rotate(50deg);
+}
+
 
 .row {
   display: flex;
@@ -106,10 +126,10 @@ h1 {
 
 
 @font-face {
-    font-family: 'space grotesk';
-    src: url('SpaceGrotesk-Regular.ttf') format('regular');
-    font-weight: 400;
-    font-style: normal;
-  }
+  font-family: 'melodrame';
+  src: url('melodrame.ttf') format('regular');
+  font-weight: 400;
+  font-style: normal;
+}
 
 
