--- a/Directory/Midterm/Contact/contact.css
+++ b/Directory/Midterm/Contact/contact.css
@@ -8,7 +8,8 @@ input[type=text], select, textarea {
     margin-top: 6px; /* Add a top margin */
     margin-bottom: 16px; /* Bottom margin */
     resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
-    font-size: 25px
+    font-size: 25px;
+    font-family:'space grotesk', sans-serif;
   }
   
   /* Style the submit button with a specific background color etc */
@@ -19,7 +20,7 @@ input[type=text], select, textarea {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:'space grotesk', sans-serif;
   }
   
   /* When moving the mouse over the submit button, add a darker green color */
