--- a/Directory/Midterm/style.css
+++ b/Directory/Midterm/style.css
@@ -43,23 +43,37 @@ html, body {
   font-size: 100px;
 } */
 
+.logo  {
+  padding: 1em;
+ 
+
+}
+
 .logo img{
-  bottom: 0;
-  right: 0;
-  max-width: 150px;
+  top: 0;
+  left: 0;
+
+  padding: 1em;
+  max-width:20em;
+  cursor: pointer;
 }
 
 .logo_1 {
-  position: relative;
-  z-index: 1;
+  position: fixed;
+  z-index: 2;
+  transform: rotate(-20deg);
+  
 }
 .logo_2 {
-  position: absolute;
-  z-index: 2;
+  position: fixed;
+  z-index: 1;
+
+  
 }
 
-.logo_2 :hover {
-  translate: rotate(50deg);
+.logo_1 img :hover {
+  transform: rotate(40deg);
+  cursor:pointer;
 }
 
 
@@ -68,22 +82,23 @@ html, body {
 }
 /* The sidebar menu */
 .sidenav {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 25vw;
+  height: 100%; 
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0; 
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 170px;
-  flex: 27%;
+  padding-top: 250px;
+  flex: 25%;
   
 }
 
 /* The navigation menu links */
 .sidenav a {
-  padding: 16px 8px 16px 16px;
+  padding: 16px 8px 16px 30px;
   text-decoration: none;
-  font-size: 2vw;
+  font-size: 25px;
   display: block;
   justify-content: space-around;
   cursor: pointer;
@@ -92,35 +107,40 @@ html, body {
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-  color: rgb(255, 195, 42);
+  text-shadow: 5px 2px 5px rgb(101, 101, 255);
   transform: scale(1.2); 
   border: 1vw solid rgb(0, 0, 0, 0); 
   background-color: rgb(0, 0, 0, 0); 
 }
 
-.sidenav .Projects-container h3 {
+.sidenav .Projects-container p {
   display: none; 
-  font-size: 1vw;
+  transition: width .5s, height .5s, transform .5s;
 }
 
 
-.sidenav .Projects-container:hover h3 {
+.sidenav .Projects-container:hover p {
   display: block;
   cursor: pointer;
-  
+  font-size: 10px;
 }
 
 /* Style page content */
 .main {
-  margin-left: 20vw; /* Same as the width of the sidebar */
+  width: 75vw;
+  margin-left: 25vw; /* Same as the width of the sidebar */
+  margin-top: 2vw;
+  margin-right: 2vw;
   padding: 10px 15px;
   flex: 75%;
+  right: 0;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
+  .main {padding-left:10px}
 }
 
 
