--- a/Directory/Midterm/Contact/contact.css
+++ b/Directory/Midterm/Contact/contact.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow: auto; /* Enable scrolling */
+}
+
 /* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
     width: 100%; /* Full width */
@@ -9,7 +13,7 @@ input[type=text], select, textarea {
     margin-bottom: 16px; /* Bottom margin */
     resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
     font-size: 25px;
-    font-family:'space grotesk', sans-serif;
+    font-family:'melodrame';
   }
   
   /* Style the submit button with a specific background color etc */
@@ -20,7 +24,7 @@ input[type=text], select, textarea {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-family:'space grotesk', sans-serif;
+    font-family:'melodrame';
   }
   
   /* When moving the mouse over the submit button, add a darker green color */
@@ -31,5 +35,9 @@ input[type=text], select, textarea {
   
   /* Add a background color and some padding around the form */
   .contact {
-    font-family: 'space grotesk';
+    font-family: 'melodrame';
+    font-family: 'melodrame';
+  overflow: visible; /* Ensure content inside can overflow */
   }
+
+  
