--- a/Directory/Midterm/Home/indexstyle.css
+++ b/Directory/Midterm/Home/indexstyle.css
@@ -1,25 +1,73 @@
 .welcome {
-    /* margin-top: 1.5vw; */
-    background-color: blue;
-    color: white;
-    border-color: blue;
+    margin-top: 1vw;
+    /* background-color: blue;
+    color: white; */
+    /* border-color: blue;
     border-style: solid;
     border-width:2cap;
     border-radius: 5px 30px 30px 30px;
     display:flex;
-    flex-direction: row;
+    flex-direction: row; */
   }
   
-  .welcome h2 {
+  /* .welcome h2 {
     font-size: 3vw;
   }
   
   .welcome h3 {
     font-size: 2vw;
+  } */
+  
+  /* .welcome img {
+    width: 50%; 
+    height: auto; 
+    object-fit: cover; 
+  } */
+
+
+  .line-1 {
+    font-size: 70px;
+    animation: fadeInUp 1.9s ease-out forwards 0.5s; /* Add delay as the last parameter */
+  }
+
+  .line-2 {
+    font-size: 30px;
+    animation: fadeInUp 2.4s ease-out forwards 1s; /* Add delay of 0.5s */
+  }
+
+  .line-3 {
+    animation: fadeInUp 2.9s ease-out forwards 2s; /* Add delay of 1s */
+    font-size: 30px;
+  }
+
+  .line-4 {
+    animation: fadeInUp 3.4s ease-out forwards 3s; /* Add delay of 1.5s */
+    font-size: 30px;
+  }
+
+  .line-1, .line-2, .line-3, .line-4 {
+    font-family: 'Moderniz';
+    position: relative; /* Important for animation */
+    margin-bottom: 30px;
+    transform: translateY(-100%);
+    opacity: 0;
   }
   
-  .welcome img {
-    width: 50%; /* Make images fill their container */
-    height: auto; /* Maintain aspect ratio */
-    object-fit: cover; /* or object-fit: contain; */
+  @keyframes fadeInUp {
+    from {
+      transform: translateY(100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+  @font-face {
+    font-family: "Moderniz";
+    src: url(./../Moderniz.otf) format(truetype);
+    font-weight: normal;
+    font-style: normal;
+    font-size: large;
   }
