--- a/Directory/Midterm/style.css
+++ b/Directory/Midterm/style.css
@@ -14,13 +14,13 @@ html {
 
 head {
     background-color: rgb(238, 245, 251);
-    font-family: "melodrame", serif;
+    font-family: "melodrame";
 }
 
 
 html, body {
   --scrollbar-width: 0px;
-  font-family: "melodrame", serif;
+  font-family: "melodrame";
   text-decoration: none;
   background-color: rgb(233, 245, 255);
   }
@@ -33,47 +33,46 @@ html, body {
     color: blue;
   }
 
-/* h1 {
-  background-color: blue;
-  width: 100%;
-  color: white;
-  padding: 2px;
-  text-decoration: none;
-  text-align: left;
-  font-size: 100px;
-} */
-
 .logo  {
   padding: 1em;
- 
-
 }
 
 .logo img{
   top: 0;
   left: 0;
-
   padding: 1em;
-  max-width:20em;
+  max-width: 15em;
   cursor: pointer;
 }
 
+/* Rotates the logo slightly counterclockwise to create a dynamic and visually appealing effect */
 .logo_1 {
   position: fixed;
   z-index: 2;
   transform: rotate(-20deg);
-  
 }
+
+
 .logo_2 {
   position: fixed;
-  z-index: 1;
-
-  
+  z-index: 1; 
 }
 
-.logo_1 img :hover {
-  transform: rotate(40deg);
-  cursor:pointer;
+.logo_1 img {
+  transition: transform 0.3s ease-in ;
+}
+
+.logo_1 img:hover {
+  animation: logoRotate 0.4s;
+  cursor: pointer;
+}
+
+@keyframes logoRotate {
+  from {
+    transform: rotate(0)
+  } to {
+    transform: rotate(10deg)
+  }
 }
 
 
@@ -89,28 +88,29 @@ html, body {
   top: 0; /* Stay at the top */
   left: 0; 
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 250px;
+  padding-top: 160px;
   flex: 25%;
   
 }
 
+
 /* The navigation menu links */
 .sidenav a {
-  padding: 16px 8px 16px 30px;
+  padding: 30px 90px 30px 40px; /* Increased left padding by 10px */
   text-decoration: none;
-  font-size: 25px;
+  font-size: 35px;
   display: block;
   justify-content: space-around;
-  cursor: pointer;
-  transition: width .5s, height .5s, transform .5s;
+  transition: transform .5s;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
   text-shadow: 5px 2px 5px rgb(101, 101, 255);
-  transform: scale(1.2); 
+  /* transform: scale(1.2);  */
   border: 1vw solid rgb(0, 0, 0, 0); 
   background-color: rgb(0, 0, 0, 0); 
+  cursor: pointer;
 }
 
 .sidenav .Projects-container p {
@@ -122,14 +122,15 @@ html, body {
 .sidenav .Projects-container:hover p {
   display: block;
   cursor: pointer;
-  font-size: 10px;
+  transform: scale(0.7);
 }
 
 /* Style page content */
 .main {
-  width: 75vw;
-  margin-left: 25vw; /* Same as the width of the sidebar */
-  margin-top: 2vw;
+  position: fixed;
+  width: 80vw;
+  margin-left: 20em; /* Same as the width of the sidebar */
+  margin-top: 5em;
   margin-right: 2vw;
   padding: 10px 15px;
   flex: 75%;
@@ -146,10 +147,17 @@ html, body {
 
 
 @font-face {
-  font-family: 'melodrame';
-  src: url('melodrame.ttf') format('regular');
-  font-weight: 400;
+  font-family: "melodrame";
+  src: url(Relationship\ of\ mélodrame.ttf) format('truetype');
+  font-weight: normal;
   font-style: normal;
+  font-size: large;
 }
 
-
+@font-face {
+  font-family: "Moderniz";
+  src: url(./../Moderniz.otf) format(truetype);
+  font-weight: normal;
+  font-style: normal;
+  font-size: large;
+}
