--- a/Directory/Midterm/Projects/Mediums/mediumsstyle.css
+++ b/Directory/Midterm/Projects/Mediums/mediumsstyle.css
@@ -1,41 +1,8 @@
-/* .pencil {
-    width: 20vw;
-    margin-right: 2vw;
-    margin-bottom: 2vw;
-    margin-top: 2vw;
-    display: inline-block;
-    position: relative;
-  }
+.main marquee{
+  font-size: 40px;
+}
 
-  .project_section {
-    display: flex;
-    justify-content: column;
-    align-items: flex-start;
-    
-  }
-
-  .project_section_artworks {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .project_section img{
-    width: 30vw;
-    height: 100%;
-  }
-
-  .project_section_container {
-    justify-content: row;
-    align-content: space-between;
-  }
-
-  .description {
-    padding: 1vw;
-    max-width: 60%;
-    font-size: 25px;
-  } */
-
+  
   .gallery_mediums {
     display: grid;
     grid-template-rows: repeat(2, fr);
@@ -62,6 +29,12 @@
     display: flex;
     flex-direction: row;
     width: 48.6%;
+    gap: 1vw;
+  }
+  .project_section_container_column {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     gap: 1vw;
   }
 
