--- a/Directory/Midterm/Resume/resumestyle.css
+++ b/Directory/Midterm/Resume/resumestyle.css
@@ -5,13 +5,25 @@
     flex-wrap: nowrap;
   }
 
+  .resume h2 {
+    font-size: 45px;
+  }
+
+  .resume h4 {
+    font-size: 30px;
+  }
+
+  .resume p {
+    font-size: 25px;
+  }
+
   .res1-container {
-    flex: 10%;
+    flex: 20%;
     padding: 1vw;
   }
 
   .res2-container {
-    flex: 20%;
+    flex: 30%;
     padding: 1vw;
   }
 
@@ -22,4 +34,5 @@
 
 .res2-container ul{
   margin-left: 1.2vw;
+  font-size: 25px;
 }
