--- a/Directory/Midterm/style.css
+++ b/Directory/Midterm/style.css
@@ -74,8 +74,17 @@ title {
   }
 }
 
+@keyframes logoRotateCounterClockwise {
+  from {
+    transform: rotate(20deg);
+  }
+  to {
+    transform: rotate(-340deg);
+  }
+}
+
 .logo_1:hover {
-  animation: logoRotate 1.5s infinite linear;
+  animation: logoRotate 1.5s  ;
 }
 
 
@@ -91,7 +100,7 @@ title {
   top: 0; /* Stay at the top */
   left: 0; 
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 140px;
+  padding-top: 130px;
   flex: 25%;
   
 }
