--- a/Directory/Midterm/Projects/Slideshow/slideshowstyle.css
+++ b/Directory/Midterm/Projects/Slideshow/slideshowstyle.css
@@ -12,6 +12,16 @@
   display: none;
 }
 
+.mySlides img {
+  height: 650px;
+  object-fit: contain;
+  width: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+
+
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
@@ -20,7 +30,7 @@
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: white;
+  color: #bbb;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
