--- a/Directory/Midterm/Loading/style.css
+++ b/Directory/Midterm/Loading/style.css
@@ -30,6 +30,11 @@ button {
 .loading {
   font-family: 'melodrame', serif, sans-serif;
   text-shadow: 0px 0px 10px  rgba(0,0,0,.3);
+  justify-content: center;
+}
+
+#loading {
+  margin: 50px;
 }
    
 p {
